# curso-alura_django-templates-e-boas-praticas

./: .gitignore  README.md  db.sqlite3  pyproject.toml  run.sh
doc/: admin.md  models.md  templates.md
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0001_initial.py  0002_fotografia_categoria.py  0003_fotografia_publicada_alter_fotografia_categoria.py  0004_fotografia_data_fotografia.py  0005_alter_fotografia_foto.py
setup/: settings.py  urls.py
templates/galeria/: imagem.html  index.html
templates/galeria/partials/: _menu.html
